Use functionality from zivid_conversions

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(rclcpp_lifecycle REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(image_transport REQUIRED)
+find_package(zivid_conversions REQUIRED)
 find_package(zivid_interfaces REQUIRED)
 
 find_package(Zivid 1.8.0 COMPONENTS Core REQUIRED)
@@ -54,6 +55,7 @@ ament_target_dependencies(zivid_camera_library
                           std_msgs
                           sensor_msgs
                           image_transport
+                          zivid_conversions
                           zivid_interfaces)
 rclcpp_components_register_node(zivid_camera_library
                                 PLUGIN
