--- a/zivid_camera/package.xml
+++ b/zivid_camera/package.xml
@@ -20,6 +20,7 @@
   <depend>image_transport</depend>
   <depend>builtin_interfaces</depend>
   <depend>rosidl_default_generators</depend>
+  <depend>zivid_conversions</depend>
   <depend>zivid_interfaces</depend>
 
   <export>
