--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -90,6 +90,8 @@ install(TARGETS manual_composition DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY include/ DESTINATION include)
 
-install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY launch
+                  rviz
+                  DESTINATION share/${PROJECT_NAME})
 
 ament_package()
